--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-        <a href="/index.html">Pomodoro Meeting Minutes</a>
+        <a href="https://arl009.github.io/Lab2_Starter/">Pomodoro Meeting Minutes</a>
     </nav>
     <header>
         <h1>Pomodoro Timer<br>First Brainstorm</h1>
