--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/site.webmanifest">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
     <title>Meeting Minutes</title>
   </head>
   <body>
@@ -38,6 +38,13 @@
                 <li>Fandric</li>
                 <li>Fandric</li>
                 <li>Fandric</li>
+                <li>
+                    <ul>
+                        <li><b>Andric</b></li>
+                        <li>Bandric</li>
+                        <li>Candric</li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <hr>
@@ -47,11 +54,6 @@
                 <li><strong class="hi">Planning</strong></li>
                 <li><span>User</span> Stories</li>
                 <li>Timeline</li>
-                <ul>
-                    <li><b>Andric</b></li>
-                    <li>Bandric</li>
-                    <li>Candric</li>
-                </ul>
             </ol>
         </section>
         <hr>
