--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/site.webmanifest">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Meeting Minutes</title>
   </head>
   <body>
@@ -38,13 +38,6 @@
                 <li>Fandric</li>
                 <li>Fandric</li>
                 <li>Fandric</li>
-                <li>
-                    <ul>
-                        <li><b>Andric</b></li>
-                        <li>Bandric</li>
-                        <li>Candric</li>
-                    </ul>
-                </li>
             </ul>
         </section>
         <hr>
@@ -54,6 +47,11 @@
                 <li><strong class="hi">Planning</strong></li>
                 <li><span>User</span> Stories</li>
                 <li>Timeline</li>
+                <ul>
+                    <li><b>Andric</b></li>
+                    <li>Bandric</li>
+                    <li>Candric</li>
+                </ul>
             </ol>
         </section>
         <hr>
@@ -74,7 +72,7 @@
         <section class="sticy">
             <h2><em>Miscellaneous Comments</em></h2>
             <p>Cat photo</p>
-            <img width="250" alt="cat" src="/images/cat.jpg">
+            <img width="250" alt="cat" src="https://raw.githubusercontent.com/arl009/sp22-cse110-lab3/main/images/cat.jpg">
             <details>
                 <summary>More Details</summary>
                 SO CUTE
@@ -83,7 +81,7 @@
         <hr>
         <section>
             <h2><em>Pictures and diagrams from the meeting</em></h2>
-            <img width="250" alt="cat" src="/images/diagram.png">
+            <img width="250" alt="cat" src="https://raw.githubusercontent.com/arl009/sp22-cse110-lab3/main/images/diagram.png">
         </section>
         <hr>
         <section>
